2013-02-19 Jérôme Pasquier  <rainbru@free.fr>

	* */Makefile.am: change GNU headers date for 2013 in all files.

2013-02-19 Jérôme Pasquier  <rainbru@free.fr>

	* src/testHelpers: change GNU headers date for 2013 in all files.
	* IrrClient/: change GNU headers date for 2013 in all files.

2013-02-12 Jérôme Pasquier  <rainbru@free.fr>

	* src/design/Makefile.am: fix an issue with moc_% custom
	rule due to .hpp headers.

2012-12-25 Jérôme Pasquier  <rainbru@free.fr>

	* src/testHelpers/DummyRenderSystem.hpp: add 3 pure virtual
	functions override to build on Ogre 1.8.1

2012-12-23 Jérôme Pasquier  <rainbru@free.fr>

	* src/client/Launcher.cpp (createRenderCombo): Ogre root's
	getAvailableRenderers function now returns a reference list
	(was a pointer to a list).

	* src/common/: many reference to STL was ambigous. Prepend
	them with std::.
	* src/olgOgreGui/: many reference to STL was ambigous. Prepend
	them with std::.

	* src/client/GsMenubase.cpp: renamed libois include directory
	from OIS to ois.
	* src/client/GsMenubase.hpp: renamed libois include directory
	from OIS to ois.

2012-12-19 Jérôme Pasquier  <rainbru@free.fr>

	* src.ogreGui/WidgetListTest.cpp: must prepend STL vector with
	std:: to avoid ambigous reference with Ogre::Vector.

	* src.ogreGui/Brush.cpp: must prepend STL vector with std:: to
	avoid ambigous reference with Ogre::Vector.

	* src/common/Version.hpp: renamed libois include directory from OIS
	to ois.

	* src/testHelpers/DummyRenderSystem.hpp: add _createDepthBufferFor
	empty function.
	* src/testHelpers/OgreMinimalSetup.hpp: add skipThisMessage parameter
	to SilentLogListener::messageLogged avoid abstract type when building
	with Ogre 1.8.

2012-10-21 Jérôme Pasquier  <rainbru@free.fr>

	* m4/rb_ogre.m4 (RB_CHECK_OGREMAIN): check for a range of Ogre3D
	version (OGRE >= 1.6.0 OGRE < 1.8.0).
	* acinclude.m4: move RB_CHECK_OGREMAIN to its own m4/ file.

2012-07-02 Jérôme Pasquier  <rainbru@free.fr>
