@@ -1,5 +1,8 @@
 2013-02-19 Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/tools/ftpclient/: change GNU headers date for 2013 in all files.
+	* src/tools/hashsum/: change GNU headers date for 2013 in all files.
+	* src/tools/transmsg/: change GNU headers date for 2013 in all files.
 	* */Makefile.am: change GNU headers date for 2013 in all files.
 
 2013-02-19 Jérôme Pasquier  <rainbru@free.fr>
